syntax="proto3";
package qvspot;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "qvspot/qvspot.proto";

option go_package = "github.com/snowzach/qvspot/qvspot";

service ManagerRPC {

    // Create/Replace a vendor
    rpc VendorSave(qvspot.Vendor) returns (qvspot.Vendor) {
        option (google.api.http) = {
            post: "/vendor"
            body: "*"
        };
    }

    // Fetch a vendor by id
    rpc VendorGetById(Request) returns (qvspot.Vendor) {
        option (google.api.http) = {
            get: "/vendor/{id}"
        };
    }

    // Delete a vendor by id
    rpc VendorDeleteById(Request) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/vendor/{id}"
        };
    }

    // Create/Replace a product
    rpc ProductSave(qvspot.Product) returns (qvspot.Product) {
        option (google.api.http) = {
            post: "/product"
            body: "*"
        };
    }

    // Fetch a product by id
    rpc ProductGetById(Request) returns (qvspot.Product) {
        option (google.api.http) = {
            get: "/product/{id}"
        };
    }

    // Delete a product by id
    rpc ProductDeleteById(Request) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/product/{id}"
        };
    }
    
    // Create/Replace a location
    rpc LocationSave(qvspot.Location) returns (qvspot.Location) {
        option (google.api.http) = {
            post: "/location"
            body: "*"
        };
    }

    // Fetch a location by id
    rpc LocationGetById(Request) returns (qvspot.Location) {
        option (google.api.http) = {
            get: "/location/{id}"
        };
    }

    // Delete a location by id
    rpc LocationDeleteById(Request) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/location/{id}"
        };
    }

    // Create/Replace an item
    rpc ItemSave(qvspot.Item) returns (qvspot.Item) {
        option (google.api.http) = {
            post: "/item"
            body: "*"
        };
    }

    // Fetch an item by id
    rpc ItemGetById(Request) returns (qvspot.Item) {
        option (google.api.http) = {
            get: "/item/{id}"
        };
    }

    // Delete a item by id
    rpc ItemDeleteById(Request) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/item/{id}"
        };
    }

}

// A generic request
message Request {
    // The id of the product
    string id = 1;
}
